[gd_scene load_steps=12 format=3 uid="uid://whwc31fcqlo8"]

[ext_resource type="Script" uid="uid://3r5xghegs1q0" path="res://Scenes/Stage/options_menu.gd" id="1_ypw4c"]
[ext_resource type="LabelSettings" uid="uid://8km1h6sydkna" path="res://Resources/LabelSettings/h2_label.tres" id="2_rqgiu"]
[ext_resource type="LabelSettings" uid="uid://bb8srn7psmosc" path="res://Resources/LabelSettings/h3_label.tres" id="3_pji3a"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_crxf8"]
bg_color = Color(0.07231444, 0.07231444, 0.07231444, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7nexd"]
content_margin_left = 32.0
content_margin_top = 32.0
content_margin_right = 32.0
content_margin_bottom = 32.0
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="Theme" id="Theme_vgy0v"]

[sub_resource type="ImageTexture" id="ImageTexture_q1oxj"]

[sub_resource type="ImageTexture" id="ImageTexture_uqmrb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ctg0j"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0.07910305, 0.07910305, 0.07910305, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q1oxj"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uqmrb"]
bg_color = Color(1, 1, 1, 1)

[node name="OptionsMenu" type="Panel"]
visible = false
anchors_preset = -1
anchor_left = 0.3
anchor_top = 0.2
anchor_right = 0.7
anchor_bottom = 0.8
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_crxf8")
script = ExtResource("1_ypw4c")

[node name="OptionsScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_7nexd")
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 32

[node name="GeneralLabel" type="Label" parent="OptionsScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "General"
label_settings = ExtResource("2_rqgiu")
vertical_alignment = 1

[node name="LanguageContainer" type="VBoxContainer" parent="OptionsScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="LanguageLabel" type="Label" parent="OptionsScrollContainer/VBoxContainer/LanguageContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Language"
label_settings = ExtResource("3_pji3a")
vertical_alignment = 1

[node name="OptionButton" type="OptionButton" parent="OptionsScrollContainer/VBoxContainer/LanguageContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../../../../BackButton")
focus_neighbor_bottom = NodePath("../../MasterVolumeContainer/MasterVolumeSlider")
focus_next = NodePath("../../MasterVolumeContainer/MasterVolumeSlider")
focus_previous = NodePath("../../../../BackButton")
theme = SubResource("Theme_vgy0v")
toggle_mode = false
clip_text = true

[node name="MasterVolumeContainer" type="VBoxContainer" parent="OptionsScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="MasterVolumeLabel" type="Label" parent="OptionsScrollContainer/VBoxContainer/MasterVolumeContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Master Volume"
label_settings = ExtResource("3_pji3a")
vertical_alignment = 1

[node name="MasterVolumeSlider" type="HSlider" parent="OptionsScrollContainer/VBoxContainer/MasterVolumeContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../../LanguageContainer/OptionButton")
focus_neighbor_bottom = NodePath("../../MusicContainer/MusicSlider")
focus_next = NodePath("../../MusicContainer/MusicSlider")
focus_previous = NodePath("../../LanguageContainer/OptionButton")
theme_override_icons/grabber = SubResource("ImageTexture_q1oxj")
theme_override_icons/grabber_highlight = SubResource("ImageTexture_uqmrb")
theme_override_styles/slider = SubResource("StyleBoxFlat_ctg0j")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_q1oxj")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_uqmrb")
value = 50.0
scrollable = false

[node name="MusicContainer" type="VBoxContainer" parent="OptionsScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="MusicLabel" type="Label" parent="OptionsScrollContainer/VBoxContainer/MusicContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Music"
label_settings = ExtResource("3_pji3a")
vertical_alignment = 1

[node name="MusicSlider" type="HSlider" parent="OptionsScrollContainer/VBoxContainer/MusicContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../../MasterVolumeContainer/MasterVolumeSlider")
focus_neighbor_bottom = NodePath("../../SFXContainer/SFXSlider")
focus_next = NodePath("../../SFXContainer/SFXSlider")
focus_previous = NodePath("../../MasterVolumeContainer/MasterVolumeSlider")
theme_override_icons/grabber = SubResource("ImageTexture_q1oxj")
theme_override_icons/grabber_highlight = SubResource("ImageTexture_uqmrb")
theme_override_styles/slider = SubResource("StyleBoxFlat_ctg0j")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_q1oxj")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_uqmrb")
value = 50.0
scrollable = false

[node name="SFXContainer" type="VBoxContainer" parent="OptionsScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="SFXLabel" type="Label" parent="OptionsScrollContainer/VBoxContainer/SFXContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "SFX"
label_settings = ExtResource("3_pji3a")
vertical_alignment = 1

[node name="SFXSlider" type="HSlider" parent="OptionsScrollContainer/VBoxContainer/SFXContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../../MusicContainer/MusicSlider")
focus_neighbor_bottom = NodePath("../../../../BackButton")
focus_next = NodePath("../../../../BackButton")
focus_previous = NodePath("../../MusicContainer/MusicSlider")
theme_override_icons/grabber = SubResource("ImageTexture_q1oxj")
theme_override_icons/grabber_highlight = SubResource("ImageTexture_uqmrb")
theme_override_styles/slider = SubResource("StyleBoxFlat_ctg0j")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_q1oxj")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_uqmrb")
value = 50.0
scrollable = false

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 1.0
anchor_right = 0.8
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
focus_neighbor_top = NodePath("../OptionsScrollContainer/VBoxContainer/SFXContainer/SFXSlider")
focus_neighbor_bottom = NodePath("../OptionsScrollContainer/VBoxContainer/LanguageContainer/OptionButton")
focus_next = NodePath("../OptionsScrollContainer/VBoxContainer/LanguageContainer/OptionButton")
focus_previous = NodePath("../OptionsScrollContainer/VBoxContainer/SFXContainer/SFXSlider")
theme_override_font_sizes/font_size = 24
text = "Back"
